--- a/Trapick/pom.xml
+++ b/Trapick/pom.xml
@@ -217,13 +217,23 @@
 			<version>${org.apache.tiles-version}</version>
 		</dependency>
 
-
 		<!-- Jsoup -->
-
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.8.3</version>
+		</dependency>
+		
+		<!-- Commons FileUpload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
 		</dependency>
 
 	</dependencies>
